--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | FAQ accordion</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,34 +16,53 @@
 </head>
 <body>
   <div id="faq">
-    <header>
+    <header class="faq-header">
+      <img src="assets/images/icon-star.svg" alt="">
       <h1>FAQs</h1>
     </header>
     <div class="question-box">
-      <p class="question">What is Frontend Mentor, and how will it help me?</p>
+      <div class="question-box-box">
+        <h3 class="question">What is Frontend Mentor, and how will it help me?</h3>
+        <img src="assets/images/icon-plus.svg" alt="">
+      </div>
       <p class="question-answer">Frontend Mentor offers realistic coding challenges to help developers improve their
         frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for
         all levels and ideal for portfolio building.</p>
+
     </div>
     <div class="question-box">
-      <p class="question">Is Frontend Mentor free?</p>
+      <div class="question-box-box">
+        <h3 class="question">Is Frontend Mentor free?</h3>
+        <img src="assets/images/icon-plus.svg" alt="">
+      </div>
       <p class="question-answer">Yes, Frontend Mentor offers both free and premium coding challenges, with the free
         option providing access to a range of projects suitable for all skill levels.</p>
+
     </div>
     <div class="question-box">
-      <p class="question">Can I use Frontend Mentor projects in my portfolio</p>
+      <div class="question-box-box">
+        <h3 class="question">Can I use Frontend Mentor projects in my portfolio</h3>
+        <img src="assets/images/icon-plus.svg" alt="">
+      </div>
       <p class="question-answer">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
         way to showcase your skills to potential employers!</p>
+
     </div>
     <div class="question-box">
-      <p class="question">How can I get help if I'm stuck on a Frontend Mentor challenge?</p>
+      <div class="question-box-box">
+        <h3 class="question">How can I get help if I'm stuck on a Frontend Mentor challenge?</h3>
+        <img src="assets/images/icon-plus.svg" alt="">
+      </div>
       <p class="question-answer">The best place to get help is inside Frontend Mentor's Discord community. There's a help
         channel where you can ask questions and seek support from other community members.</p>
+
     </div>
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Daniel Ajibewa</a>.
   </div>
+
+  <script src="index.js"></script>
 </body>
 </html>
